syntax = "proto3";

package user;

option go_package = "api/user/";


service UserService {
  rpc GetOrCreateUser(GetOrCreateUserRequest) returns (GetOrCreateUserResponse);
}

message GetOrCreateUserRequest {
  int64 tg_id = 1;
}

message GetOrCreateUserResponse {
  string balance = 1;
}
